<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:elevation="10dp"
    android:orientation="vertical"
    tools:context=".LogInActivity">

    <ImageView
        android:id="@+id/logoImage"
        android:transitionName="logo_image"
        android:layout_width="50dp"
        android:layout_height="64dp"
        android:layout_marginStart="341.5dp"
        android:layout_marginEnd="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/logo_2" />

    <TextView
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:fontFamily="@font/neusa_bold"
        android:text="@string/greetings"
        android:textColor="@color/gray_700"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/slogan_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:text="@string/slogan_name"
        android:textColor="@color/gray_500"
        android:textSize="18sp" />

    <!-- LOG IN FORM -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/container"
        android:elevation="10dp"
        android:orientation="vertical"
        android:padding="10dp">

        <!-- USERNAME -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Username"
            app:endIconMode="clear_text"
            app:endIconTint="@color/gray_700"
            app:startIconDrawable="@drawable/ic_person_24dp"
            app:startIconTint="@color/gray_700">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- PASSWORD -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Password"
            android:textColorHint="@color/gray_700"
            app:endIconTint="@color/gray_700"
            app:passwordToggleEnabled="true"
            app:startIconDrawable="@drawable/ic_lock_24dp"
            app:startIconTint="@color/gray_700">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/white"
                android:inputType="textPassword"
                />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="319dp">

        <Button
            android:layout_width="186dp"
            android:layout_height="36dp"
            android:layout_gravity="right"
            android:background="@android:color/transparent"
            android:elevation="0dp"
            android:fontFamily="@font/neusa_light"
            android:text="@string/forget_pass"
            android:textAllCaps="false"
            android:textColor="@color/green_500"
            app:layout_constraintBottom_toTopOf="@+id/login_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.924"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="MissingConstraints"
            />

        <Button
            android:id="@+id/login_btn"
            android:layout_width="367dp"
            android:layout_height="44dp"
            android:background="@drawable/bg_button"
            android:elevation="12dp"
            android:fontFamily="@font/neusa_med"
            android:text="LOG IN"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.167"
            />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/circle"
            android:elevation="10dp"
            app:layout_constraintBottom_toBottomOf="@+id/login_btn"
            app:layout_constraintEnd_toEndOf="@+id/login_btn"
            app:layout_constraintHorizontal_bias="0.941"
            app:layout_constraintStart_toStartOf="@+id/login_btn"
            app:layout_constraintTop_toTopOf="@+id/login_btn"
            app:srcCompat="@drawable/ic_arrow_right_24dp" />

        <TextView
            android:id="@+id/signUp_Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@null"
            android:fontFamily="@font/neusa_reg"
            android:text="@string/askSign_up"
            android:textColor="@color/gray_700"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_btn"
            app:layout_constraintVertical_bias="0.0"
            android:transitionName="text_tran"/>

        <Button
            android:id="@+id/signup_btn"
            android:layout_width="200dp"
            android:layout_height="27dp"
            android:layout_marginBottom="168dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/neusa_light"
            android:padding="0dp"
            android:text="@string/sign_upText"
            android:textAllCaps="false"
            android:textColor="@color/green_500"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signUp_Text"
           />

    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>